<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Current"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/black"
        android:gravity="bottom"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="50sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:layout_weight="7"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <Button
                        android:id="@+id/C"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/clear"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/leftbrac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/leftbrac"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/Rightbrac"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/rightbrac"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/add"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/add"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <Button
                        android:id="@+id/seven"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/seven"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/eight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/eight"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/Nine"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/N"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/multiply"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/multi"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <Button
                        android:id="@+id/four"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/four"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/five"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/five"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/six"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/six"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/divide"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/divide"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <Button
                        android:id="@+id/one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/one"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/two"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/three"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/three"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/subtract"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/subtract"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4">
                    <Button
                        android:id="@+id/AC"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/ac"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/zero"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/decimal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/decimal"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                    <Button
                        android:id="@+id/equal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black"
                        android:layout_weight="1"
                        android:text="@string/equals"
                        android:textColor="@color/orange"
                        android:textSize="30sp">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>